fixed time shift mechanic && add logging

--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,5 @@ li p {
     text-decoration: none;
 }
 
+html, body { margin:0; padding:0; overflow:hidden }
+svg { position:fixed; top:0; left:0; height:100%; width:100% }
